fix: change wrong margins on main page 1000px

--- a/online-zoo/pages/donate/style.css
+++ b/online-zoo/pages/donate/style.css
@@ -1016,7 +1016,7 @@ input[type=email]:invalid:focus + .email-form-button .button__submit {
     margin-top: 55px;
     margin-left: -13px;
   }
-  .separator {
+  .donate-visualization-text .separator {
     margin-top: 25px;
   }
   .range-bar__1600px {
